# androidPlayground

android/: .gitignore  build.gradle  import-summary.txt  proguard-rules-release.txt  proguard-rules.txt  settings.gradle  watch_cmake_output.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vicman/jnitest/activities/: BaseActivity.java  MainActivity.java
android/app/src/main/java/com/vicman/jnitest/adapters/: ViewPagerAdapter.java
android/app/src/main/java/com/vicman/jnitest/fragments/: BaseFragment.java  GifFragment.java  ImageFragment.java  InfoFragment.java  VideoFragment.java
android/app/src/main/java/com/vicman/jnitest/retrofit/: Api.java  ProcessQueueResult.java  ProcessResult.java
android/app/src/main/java/com/vicman/jnitest/utils/: GlideConfiguration.java  OkHttpUtils.java  PermissionHelper.java  Utils.java
android/app/src/main/res/layout/: gif_fragment.xml  image_fragment.xml  info_fragment.xml  main_activity.xml  video_fragment.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/mobile-ffmpeg-min-gpl-3.1/: build.gradle
android/openCV_v3.4.3/: build.gradle
src_cpp/: CMakeLists.txt  iogif.cpp  iogif.hpp  jnitest.cpp
src_cpp/giflib/: gif_font.c
src_cpp/include/: VideoFragment.h
src_cpp/include/ffmpeg/fftools/: cmdutils.h  ffmpeg.c  ffmpeg.h
src_cpp/include/ffmpeg/libavformat/: os_support.h
src_cpp/include/ffmpeg/libavutil/: timer.h
